--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -7,7 +7,6 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🛡️</text></svg>">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-<script src="https://sites.super.myninja.ai/_assets/ninja-daytona-script.js"></script>
 </head>
 <body>
     <a href="#main-content" class="skip-link">Zum Hauptinhalt springen</a>
@@ -315,7 +314,7 @@
                 <div class="card">
                     <div class="card-header"><h3><i class="bi bi-list-check mr-1"></i> CVE-Datenbank</h3></div>
                     <div class="card-body">
-                        <div class="filter-bar mb-2">
+                        <div class="filters-bar mb-2">
                             <div class="form-group"><label>Severity</label>
                                 <select id="cveFilterSeverity" class="form-control" onchange="loadCVEs()"><option value="">Alle</option><option value="critical">Kritisch</option><option value="high">Hoch</option><option value="medium">Mittel</option><option value="low">Niedrig</option></select></div>
                             <div class="form-group"><label>Jahr</label>
