--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -6,6 +6,7 @@
     <title>SecureScope - Dashboard</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🛡️</text></svg>">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xterm@5.3.0/css/xterm.css" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -478,6 +479,13 @@
                             <div class="form-group"><label>Ziel-IP</label><input type="text" id="chainExecTargetIp" class="form-control" placeholder="z.B. 192.168.1.1"></div>
                             <div class="form-group"><label>Ziel-Port</label><input type="number" id="chainExecTargetPort" class="form-control" placeholder="z.B. 445"></div>
                             <div class="form-group"><label>Angriffskette</label><select id="chainExecChainId" class="form-control"></select></div>
+                            <div class="form-group full-width" style="border-top:1px solid var(--border-color);padding-top:1rem;margin-top:0.5rem">
+                                <h4>Exploit Parameter</h4>
+                                <div class="scan-config" style="grid-template-columns: 1fr 1fr; margin-top:0.5rem">
+                                    <div class="form-group"><label>LHOST (Listener IP)</label><input type="text" id="chainExecLHOST" class="form-control" placeholder="Eigene IP (Docker IP)"></div>
+                                    <div class="form-group"><label>LPORT (Listener Port)</label><input type="number" id="chainExecLPORT" class="form-control" placeholder="z.B. 4444"></div>
+                                </div>
+                            </div>
                             <div class="full-width"><button class="btn btn-danger" onclick="executeChain()"><i class="bi bi-play-fill"></i> Kette starten</button></div>
                         </div>
                     </div>
@@ -874,9 +882,27 @@
         </div>
     </div>
 
+    <!-- ========== Shell Modal ========== -->
+    <div class="modal-overlay" id="shellModal">
+        <div class="modal modal-lg" style="max-width: 90vw; height: 90vh; display: flex; flex-direction: column;">
+            <div class="modal-header">
+                <h3><i class="bi bi-terminal-fill mr-1"></i> Remote Shell</h3>
+                <div class="d-flex gap-1">
+                    <span id="shellStatus" class="badge badge-gray">Getrennt</span>
+                    <button class="btn-icon btn-outline" onclick="hideShellModal()"><i class="bi bi-x-lg"></i></button>
+                </div>
+            </div>
+            <div class="modal-body" style="flex: 1; padding: 0; background: #000; overflow: hidden; position: relative;">
+                <div id="terminal-container" style="width: 100%; height: 100%;"></div>
+            </div>
+        </div>
+    </div>
+
     <!-- Toast Container -->
     <div class="toast-container" id="toastContainer"></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/xterm@5.3.0/lib/xterm.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/xterm-addon-fit@0.8.0/lib/xterm-addon-fit.js"></script>
     <script src="js/dashboard.js"></script>
 </body>
 </html>
