--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -896,6 +896,33 @@
         </div>
     </div>
 
+    <!-- ========== Auto-Attack Modal (Simplified for Auditors) ========== -->
+    <div class="modal-overlay" id="autoAttackModal">
+        <div class="modal modal-lg">
+            <div class="modal-header" style="background:linear-gradient(135deg, rgba(239,68,68,0.1), rgba(239,68,68,0.05))">
+                <h3><i class="bi bi-lightning-charge-fill mr-1" style="color:var(--accent-red)"></i> Automatischer Angriff</h3>
+                <button class="btn-icon btn-outline" onclick="hideAutoAttackModal()"><i class="bi bi-x-lg"></i></button>
+            </div>
+            <div class="modal-body">
+                <div id="autoAttackContent">
+                    <!-- Dynamic content loaded by JS -->
+                </div>
+                <div id="autoAttackProgress" class="hidden">
+                    <!-- Progress indicator -->
+                </div>
+                <div id="autoAttackResult" class="hidden">
+                    <!-- Results -->
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-outline" onclick="hideAutoAttackModal()">Schließen</button>
+                <button class="btn btn-danger" id="autoAttackStartBtn" onclick="startAutoAttack()" disabled>
+                    <i class="bi bi-lightning-charge-fill"></i> Angriff starten
+                </button>
+            </div>
+        </div>
+    </div>
+
     <!-- ========== Chain Target Modal (Service Selection) ========== -->
     <div class="modal-overlay" id="chainTargetModal">
         <div class="modal"><div class="modal-header"><h3><i class="bi bi-diagram-3 mr-1"></i> Chain für Ziel erstellen</h3><button class="btn-icon btn-outline" onclick="hideChainTargetModal()"><i class="bi bi-x-lg"></i></button></div>
