--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -101,6 +101,9 @@
                     <h1 id="viewTitle">Dashboard</h1>
                 </div>
                 <div class="topbar-actions">
+                    <button class="theme-toggle" onclick="showLogModal()" title="Live Logs" aria-label="Live Logs öffnen">
+                        <i class="bi bi-terminal"></i>
+                    </button>
                     <button class="theme-toggle" onclick="toggleTheme()" title="Theme wechseln" aria-label="Design wechseln">
                         <i class="bi bi-moon-stars" id="themeIcon"></i>
                     </button>
@@ -948,6 +951,26 @@
             <div class="modal-footer">
                 <button class="btn btn-outline" onclick="hideExploitCodeModal()">Schließen</button>
                 <a id="exploitCodeExtLink" href="#" target="_blank" class="btn btn-primary"><i class="bi bi-box-arrow-up-right"></i> Auf Exploit-DB öffnen</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- ========== Live Log Modal ========== -->
+    <div class="modal-overlay" id="logModal">
+        <div class="modal modal-lg" style="max-width: 90vw; height: 85vh; display: flex; flex-direction: column;">
+            <div class="modal-header">
+                <h3><i class="bi bi-terminal mr-1"></i> System Live Log</h3>
+                <div class="d-flex gap-1">
+                    <button class="btn btn-outline btn-sm" onclick="clearLogs()">Leeren</button>
+                    <button class="btn-icon btn-outline" onclick="hideLogModal()" aria-label="Schließen"><i class="bi bi-x-lg"></i></button>
+                </div>
+            </div>
+            <div class="modal-body" style="flex: 1; padding: 0; background: #1e1e1e; overflow: hidden; display:flex; flex-direction:column">
+                <div id="logContainer" style="flex:1; overflow-y:auto; padding: 1rem; font-family: 'SF Mono', monospace; font-size: 0.85rem; color: #d4d4d4; line-height: 1.4;"></div>
+                <div style="padding: 0.5rem; background: #2d2d2d; border-top: 1px solid #3d3d3d; font-size: 0.75rem; color: #aaa; display: flex; justify-content: space-between;">
+                    <span id="logStatus">Verbunden</span>
+                    <label style="display:flex;align-items:center;gap:0.5rem;cursor:pointer"><input type="checkbox" id="logAutoScroll" checked> Auto-Scroll</label>
+                </div>
             </div>
         </div>
     </div>
