--- a/public/index.html
+++ b/public/index.html
@@ -21,14 +21,14 @@
                 <!-- Login Form -->
                 <form id="loginForm" autocomplete="off">
                     <div  class="form-group">
-                        <label for="username">Benutzername</label>
+                        <label for="username">Benutzername <span class="color-red">*</span></label>
                         <div  class="input-group">
                             <i  class="bi bi-person input-icon"></i>
                             <input type="text" id="username"  placeholder="Benutzername eingeben" required autofocus class="form-control">
                         </div>
                     </div>
                     <div  class="form-group">
-                        <label for="password">Passwort</label>
+                        <label for="password">Passwort <span class="color-red">*</span></label>
                         <div  class="input-group">
                             <i  class="bi bi-lock input-icon"></i>
                             <input type="password" id="password"  placeholder="Passwort eingeben" required class="form-control">
@@ -55,21 +55,21 @@
                         </p>
                     </div>
                     <div  class="form-group">
-                        <label for="currentPassword">Aktuelles Passwort</label>
+                        <label for="currentPassword">Aktuelles Passwort <span class="color-red">*</span></label>
                         <div  class="input-group">
                             <i  class="bi bi-lock input-icon"></i>
                             <input type="password" id="currentPassword"  placeholder="Aktuelles Passwort" required class="form-control">
                         </div>
                     </div>
                     <div  class="form-group">
-                        <label for="newPassword">Neues Passwort</label>
+                        <label for="newPassword">Neues Passwort <span class="color-red">*</span></label>
                         <div  class="input-group">
                             <i  class="bi bi-key input-icon"></i>
                             <input type="password" id="newPassword"  placeholder="Neues Passwort" required class="form-control">
                         </div>
                     </div>
                     <div  class="form-group">
-                        <label for="confirmPassword">Passwort bestätigen</label>
+                        <label for="confirmPassword">Passwort bestätigen <span class="color-red">*</span></label>
                         <div  class="input-group">
                             <i  class="bi bi-key-fill input-icon"></i>
                             <input type="password" id="confirmPassword"  placeholder="Passwort wiederholen" required class="form-control">
