--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1043,7 +1043,7 @@
     </div>
 
     <!-- Toast Container -->
-    <div  id="toastContainer" class="toast-container"></div>
+    <div  id="toastContainer" class="toast-container" aria-live="polite"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/xterm@5.3.0/lib/xterm.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/xterm-addon-fit@0.8.0/lib/xterm-addon-fit.js"></script>
