--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
     </div>
 
     <!-- Toast Container -->
-    <div  id="toastContainer" class="toast-container"></div>
+    <div  id="toastContainer" class="toast-container" aria-live="polite"></div>
 
     <script src="js/login.js"></script>
 </body>
